docs/sf-export/sfdx-raw/objects/Append_Leads_Config__mdt/Append_Leads_Config__mdt.object-meta.xml
<CustomObject>
    <label>Append Leads Config</label>
    <pluralLabel>Append Leads Config</pluralLabel>
</CustomObject>