docs/sf-export/sfdx-raw/objects/Append_Leads_Config__mdt/fields/Dispositions_to_Exclude__c.field-meta.xml
<CustomField>
    <fullName>Dispositions_to_Exclude__c</fullName>
    <label>Dispositions to Exclude</label>
    <length>255</length>
    <type>Text</type>
</CustomField>